redis工具，测试整改