@@ -20,7 +20,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>21</java.version>
-        
+        <argLine>-Djdk.attach.allowAttachSelf=true -Xms128m -Xmx384m</argLine>
     </properties>
 
     <dependencies>
